--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^6.0.2",
     "@react-icons/all-files": "^4.1.0",
+    "@react-spring/web": "^9.7.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-spring": "^9.7.4",
     "resend": "^4.0.0"
   },
   "devDependencies": {
